Progress on frontend - Added username prompt - Added list of users sidebar - Fixed overflow bug when too many rooms were created

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6,68 +6,137 @@
 body {
   font-family: Helvetica, Arial; }
 
-#container .section {
-  height: 100vh; }
-#container .sidebar h2 {
-  text-align: center;
-  font-size: 24px;
-  text-shadow: 1px 1px 1px #ccc;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  border-bottom: 2px solid #000; }
-#container #rooms {
-  width: 190px;
-  float: left;
-  box-shadow: inset -1px 0 #ccc;
-  position: relative; }
-  #container #rooms .room {
-    padding: 5px;
-    border-bottom: 1px solid #000;
-    height: 30px;
-    position: relative;
-    cursor: pointer;
-    margin-right: 1px; }
-    #container #rooms .room * {
-      display: inline-block; }
-    #container #rooms .room .name {
-      width: 160px;
+#container {
+  /*
+  #prompt.active .prompt-box {
+  	transition: transform .2s ease;
+  	transform: translate(-50%, -50%) scale(1);
+  }
+  */ }
+  #container .section {
+    height: 100vh; }
+    #container .section .list {
+      height: calc(100% - 40px);
+      padding-bottom: 40px;
+      overflow-y: scroll; }
+  #container .sidebar h2 {
+    text-align: center;
+    font-size: 24px;
+    text-shadow: 1px 1px 1px #ccc;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #000; }
+  #container #rooms {
+    width: 202px;
+    float: left;
+    border-right: 1px solid #ccc;
+    position: relative; }
+    #container #rooms .room {
+      padding: 5px;
+      border-bottom: 1px solid #000;
+      height: 30px;
+      position: relative;
+      cursor: pointer;
+      font-style: italic; }
+      #container #rooms .room * {
+        display: inline-block; }
+      #container #rooms .room .room-name {
+        width: 160px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap; }
+      #container #rooms .room .connectionIndicator {
+        width: 15px;
+        height: 15px;
+        border: 1px solid #000;
+        border-radius: 50%;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 5px; }
+      #container #rooms .room .connectionIndicator.off {
+        background-color: #FFF; }
+      #container #rooms .room .connectionIndicator.on {
+        background-color: #00ff00; }
+    #container #rooms .room:hover {
+      background-color: #ebebeb; }
+    #container #rooms .list > div:last-of-type {
+      border-bottom: 0; }
+    #container #rooms #newRoomButton {
+      position: absolute;
+      bottom: 0;
+      width: calc(100% - 1px);
+      text-align: center;
+      border-top: 1px solid #000;
+      padding: 10px 0;
+      background: repeating-linear-gradient(-45deg, #FFF, #FFF 10px, #eeeeee 10px, #eeeeee 20px);
+      cursor: pointer;
+      text-shadow: 1px 1px 1px #ccc; }
+    #container #rooms #newRoomButton:hover {
+      background: #eeeeee; }
+  #container #chat {
+    width: calc(100% - 404px);
+    float: left; }
+  #container #users {
+    width: 202px;
+    float: right;
+    box-shadow: inset 1px 0 #ccc; }
+    #container #users h2 {
+      margin-bottom: 4px; }
+    #container #users .user-name {
+      padding: 2px 5px;
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap; }
-    #container #rooms .room .connectionIndicator {
-      width: 15px;
-      height: 15px;
-      border: 1px solid #000;
-      border-radius: 50%;
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      right: 5px; }
-    #container #rooms .room .connectionIndicator.off {
-      background-color: #fff; }
-    #container #rooms .room .connectionIndicator.on {
-      background-color: #00ff00; }
-  #container #rooms .room:hover {
-    background-color: gainsboro; }
-  #container #rooms #newRoomButton {
+  #container #prompt {
     position: absolute;
-    bottom: 0;
-    width: calc(100% - 1px);
-    text-align: center;
-    border-top: 1px solid #000;
-    padding: 10px 0;
-    background: repeating-linear-gradient(-45deg, #fff, #fff 10px, #eeeeee 10px, #eeeeee 20px);
-    cursor: pointer;
-    margin-right: 1px;
-    text-shadow: 1px 1px 1px #ccc; }
-  #container #rooms #newRoomButton:hover {
-    background: #eeeeee; }
-#container #chat {
-  width: calc(100% - 380px);
-  float: left; }
-#container #users {
-  width: 190px;
-  float: right;
-  box-shadow: inset 1px 0 #ccc; }
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: radial-gradient(circle at 50% calc(50% - 180px), rgba(100, 100, 100, 0.5), rgba(20, 20, 20, 0.5)); }
+    #container #prompt .prompt-box {
+      position: absolute;
+      top: calc(50% - 200px);
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 600px;
+      background: linear-gradient(to top left, #000, #404040);
+      text-align: center;
+      padding: 30px 20px 25px 20px;
+      border-radius: 5px;
+      color: #FFF;
+      box-shadow: 2px 2px 8px #000; }
+      #container #prompt .prompt-box .prompt-question {
+        font-size: 18px;
+        margin-bottom: 15px; }
+      #container #prompt .prompt-box .prompt-input {
+        border-radius: 1px;
+        border: 0;
+        padding: 6px;
+        width: 80%;
+        margin-left: 50%;
+        transform: translateX(-50%);
+        font-size: 16px;
+        outline: 0;
+        display: block; }
+      #container #prompt .prompt-box .prompt-input:focus::-webkit-input-placeholder {
+        color: transparent; }
+      #container #prompt .prompt-box .prompt-submit {
+        font-size: 20px;
+        font-weight: lighter;
+        letter-spacing: 1px;
+        margin-top: 15px;
+        margin-bottom: 1px;
+        padding: 0 10px 4px 10px;
+        display: inline-block;
+        cursor: pointer; }
+      #container #prompt .prompt-box .prompt-submit:hover {
+        border-bottom: 1px solid #FFF;
+        margin-bottom: 0; }
+  #container #prompt.active {
+    display: block; }
+  #container #prompt.inactive, #container #prompt:not(.active) {
+    display: none; }
 
 /*# sourceMappingURL=index.css.map */
